# ldoce5viewer-pyside6

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  install-arch.sh  install-macos.sh  ldoce5viewer.desktop  ldoce5viewer.py  main.py  pyproject.toml  setup.py
docs/: installation.md  learning-guide.md  migration.md
ldoce5viewer/: __init__.py  fulltext.py  incremental.py
ldoce5viewer/ldoce5/: __init__.py  advtree.py  extract.py  filemap.py  idmreader.py  transform.py  transform_body.py  utils.py
ldoce5viewer/qtgui/: __init__.py  access.py  advanced.py  async_.py  config.py  indexer.py  main.py
ldoce5viewer/qtgui/resources/: Makefile  __init__.py
ldoce5viewer/qtgui/resources/icons/: LICENSE.txt  Makefile  icongen.py
ldoce5viewer/qtgui/ui/: Makefile  custom.py  main.ui
ldoce5viewer/qtgui/utils/: error.py  fontfallback.py  singleapp.py  soundplayer.py
ldoce5viewer/qtgui/utils/mp3play/: __init__.py  windows.py
ldoce5viewer/static/scripts/: entry.js
ldoce5viewer/static/styles/: about.css  activator.css  collocations.css  colorbox.css  common.css  entry.css  examples.css  phrases.css  search.css  thesaurus.css  word_families.css
ldoce5viewer/utils/: cdb.py  compat.py  text.py
scripts/: ldoce5viewer
